# PostbinUltra

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml
.claude/skills/docs/: SKILL.md
.github/workflows/: ci.yml  release.yml  site.yml  tag.yml
crates/postbin-ultra/: Cargo.toml
crates/postbin-ultra-desktop/: Cargo.toml
crates/postbin-ultra-desktop/assets/icons/: AppIcon.icns
crates/postbin-ultra-desktop/src/: app.rs  fonts.rs  format.rs  highlight.rs  icon.rs  main.rs  state.rs  theme.rs  tree.rs  widgets.rs
crates/postbin-ultra/src/: capture.rs  lib.rs  request.rs  settings.rs  store.rs  supervisor.rs  update.rs
crates/postbin-ultra/tests/: capture_tests.rs  forward_outcome_tests.rs
docs/: architecture.md  build-from-source.md
scripts/: bundle-mac.sh  homebrew-formula.rb  install.sh  sample-requests.sh
site/: build.mjs  cli-help.txt  package-lock.json  package.json
site/content/: 404.md  api.md  changelog.md  cli.md  comparison.md  configuration.md  contributing.md  forward.md  index.md  install.md  logging.md  proxy.md  quick-start.md  use-cases.md  web-ui.md
site/static/: copy.js  style.css  theme.js
site/templates/: home.html  layout.html
site/templates/partials/: footer.html  nav.html
src/: app.rs  assets.rs  capture.rs  cli.rs  entrypoint.rs  lib.rs  main.rs  output.rs  request.rs  store.rs  ui.rs
tests/: capture_tests.rs  e2e_tests.rs  ui_tests.rs
tools/icon-gen/: Cargo.toml
tools/icon-gen/src/: main.rs
ui/: app.js  index.html  style.css
