[package]
name = "postbin-ultra"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "A blazing-fast local request inspector for developers."
authors = ["MPJHorner <matt@heyjodie.com>"]
license = "MIT"
repository = "https://github.com/MPJHorner/PostbinUltra"
homepage = "https://github.com/MPJHorner/PostbinUltra"
readme = "README.md"
keywords = ["webhook", "http", "debugging", "request-bin", "developer-tools"]
categories = ["command-line-utilities", "development-tools::debugging", "web-programming::http-server"]

[lib]
name = "postbin_ultra"
path = "src/lib.rs"

[[bin]]
name = "postbin-ultra"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
owo-colors = { version = "4", features = ["supports-colors"] }
humansize = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
http-body-util = "0.1"
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-tar", "archive-zip", "compression-flate2"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
tokio-test = "0.4"
pretty_assertions = "1"
serial_test = "3"
eventsource-client = "0.13"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
