[workspace]
resolver = "2"
members = [
    "crates/postbin-ultra",
    "crates/postbin-ultra-desktop",
    "tools/icon-gen",
]
default-members = [
    "crates/postbin-ultra",
    "crates/postbin-ultra-desktop",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Matt Horner <matt@matthorner.co.uk>"]
repository = "https://github.com/MPJHorner/PostbinUltra"
homepage = "https://github.com/MPJHorner/PostbinUltra"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
