[package]
name = "postbin-ultra-desktop"
version = "2.0.0"
description = "Postbin Ultra — native HTTP request inspector for macOS, Linux, and Windows."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
# Bin name (not the package name) — what `target/release/...` is called and
# therefore what macOS shows in the dock when running unbundled (e.g. via
# `make desktop`). Spaces aren't worth the filesystem grief, so we use
# camel-case.
name = "PostbinUltra"
path = "src/main.rs"

[dependencies]
postbin-ultra = { path = "../postbin-ultra" }
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
    # Required for Linux. winit links its Wayland / X11 backends only when
    # one of these features is on; without them the build fails with "the
    # platform you're compiling for is not supported by winit". macOS and
    # Windows ignore the features.
    "wayland",
    "x11",
] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
url = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
# `http` lives at `axum::http` in the lib crate; we re-build the request the
# same way for replay so we use the same types.
http = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
humansize = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
bytes = "1"
