[package]
name = "postbin-ultra"
version = "2.0.0"
description = "HTTP capture engine for the Postbin Ultra desktop app — bounded request store, capture server, forward proxy, hot-restart supervisor."
keywords = ["webhook", "http", "debugging", "request-bin", "developer-tools"]
categories = ["development-tools::debugging", "web-programming::http-server"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[lib]
name = "postbin_ultra"
path = "src/lib.rs"

[dependencies]
# Capture server (axum) + lightweight HTTP runtime helpers.
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
humansize = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
http-body-util = "0.1"
# Self-update: queries GitHub releases + replaces the running binary on disk.
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-tar", "archive-zip", "compression-flate2"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
url = "2"
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
serial_test = "3"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
tempfile = "3"
http = "1"
